# kelp-o-matic

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CODEOWNERS  LICENSE  LICENSE.Clay  LICENSE.txt  README.md  README.rst  TODO.md  bkp.setup.py  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: _conda-build.yml  build-test.yml  codeql-analysis.yml  conda-build.yml  conda-publish.yml  lint.yaml  pypi-publish.yml  python-package-conda.yml  python-package.yml  test-conda-build.yml  test.yaml  test.yml  unit-test.yml
conda/: meta.yaml  recipe.yaml
conda/hakai_segmentation/: meta.yaml
docs/: about.md  about.rst  attribution.md  beginner_guide_execution.rst  beginner_guide_index.rst  beginner_guide_setup.rst  citations.bib  cli.md  cli.rst  conf.py  expectations.md  expectations.rst  faqs.md  glossary.md  hakai_segmentation.data.rst  hakai_segmentation.geotiff_io.rst  hakai_segmentation.rst  index.md  index.rst  installation.md  installation.rst  lib.rst  model_outputs.md  model_performance.md  post_processing.md  python_lib.md  quick_reference.md  requirements.txt  training_details.md  usage.rst
docs/_html/: robots.txt  sitemap-index.xml
docs/_templates/: cli.rst
docs/beginner_guide/: execution.md  index.md  install_env_setup.md  post_processing.md  setup.md  terminal_crash_course.md
docs/javascripts/: header-link.js
docs/stylesheets/: extra.css
examples/: kelp_bulk_from_googlesheet_Aug2025.ipynb  kelp_rgb_bulk.ipynb  kelp_rgb_bulk_simple.ipynb
hakai_segmentation/: __init__.py  cli.py  lib.py  main.py  managers.py  models.py
hakai_segmentation/data/: __init__.py
hakai_segmentation/geotiff_io/: __init__.py  geotiff_reader.py  geotiff_writer.py
hooks/: hook-rasterio.py
kelp_o_matic/: __init__.py  cli.py  hann.py  lib.py  managers.py  models.py  utils.py
kelp_o_matic/data/: __init__.py
kelp_o_matic/geotiff_io/: __init__.py  geotiff_reader.py  geotiff_writer.py
notebooks/: create_substrate_file.ipynb  export_s2l2a.ipynb  export_skema_onnx.ipynb
src/habitat_mapper/: __init__.py  config.py  hann.py  main.py  model.py  processing.py  reader.py  registry.py  utils.py
src/habitat_mapper/configs/: kelp_rgb_20240722.json  kelp_rgbi_20231214.json  kelp_skema_20250818.json  kelp_skema_full_20250714.json  mussel_gooseneck_rgb_20250725.json  mussel_rgb_20250711.json
src/kelp_o_matic/: __init__.py  config.py  hann.py  main.py  model.py  processing.py  reader.py  registry.py  utils.py
src/kelp_o_matic/configs/: kelp_ps8b_20250626.json  kelp_ps8b_20250814.json  kelp_ps8b_20250818.json  kelp_rgb_20240722.json  kelp_rgb_20250714.json  kelp_rgb_20250727.json  kelp_rgb_20250728.json  kelp_rgbi_20231214.json  kelp_s2l2a_20250818.json  kelp_skema_20250818.json  kelp_skema_full_20250714.json  mussel_gooseneck_rgb_20250724.json  mussel_gooseneck_rgb_20250725.json  mussel_rgb_20250711.json
tests/: test_NumpyMemoryRegister.py  test_TorchMemoryRegister.py  test_geotiff_reader.py  test_window_generation_coverage.py
windows/: rasterio-1.2.10-cp38-cp38-win32.whl  rasterio-1.2.10-cp39-cp39-win32.whl
