[project]
name = "habitat-mapper"
version = "0.14.1"
description = "Habitat segmentation with AI"
readme = "README.md"
authors = [{ name = "Taylor Denouden", email = "taylor.denouden@hakai.org" }]
requires-python = ">=3.10,<3.14"
license = "MIT"
dependencies = [
    "cyclopts>=3.22.2",
    "defusedxml>=0.7.1",
    "deprecation>=2.1.0",
    "humanize>=4.12.3",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "onnxruntime>=1.22.1 ; platform_system == 'Darwin'",
    "onnxruntime-gpu[cuda, cudnn]>=1.22.0 ; platform_system != 'Darwin'",
    "opencv-python-headless>=4.11.0.86",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "rich>=13.0.0",
    "rioxarray>=0.19.0",
    "xarray>=2025.6.1",
]

[dependency-groups]
conversion = [
    "notebook>=7.4.5",
    "onnxscript>=0.5.4",
    "segmentation-models-pytorch>=0.5.0",
]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pyupgrade>=3.20.0",
    "ruff>=0.12.5",
    "types-requests>=2.32.4.20250809",
]
docs = [
    "click==8.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings-python>=1.19.0",
]
examples = [
    "fiona>=1.10.1",
    "jupyter>=1.1.1",
    "polars>=1.33.0",
    "rasterio>=1.4.3",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]

[project.urls]
Documentation = "https://habitat-mapper.readthedocs.io"

[project.scripts]
hab = "habitat_mapper.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "UP",
    "ANN",
    "TC",
    "DOC",
    "D",
    "NPY",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # Ignore use of assert in tests
    "N999",  # Invalid module name
    "D",     # Docstrings
]
"**/*.ipynb" = [
    "T201",  # print statements
    "ANN",   # annotations
    "D",     # docstrings
    "S101",  # assert statements
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
strict = true

# Third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "onnxruntime.*",
    "rasterio.*"
]
ignore_missing_imports = true
